# bot_foundation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/bot_foundation/: __init__.py  bot.py
src/bot_foundation/database/: models.py
src/bot_foundation/exceptions/: __init__.py
src/bot_foundation/helpers/: checks.py  db_manager.py  prompts.py
tests/: test_bot_foundation.py
