[tool.poetry]
name = "bot_foundation"
version = "0.1.0"
description = "A foundation bot that I can add cogs too later "
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.1.0"
sqlalchemy = "^2.0.2"
aiosqlite = "^0.18.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
